--- a/Deel1/brainstorm2018wa2sb2025seleniumSimple/pom.xml
+++ b/Deel1/brainstorm2018wa2sb2025seleniumSimple/pom.xml
@@ -164,6 +164,12 @@
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>${selenium.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.wiremock.integrations</groupId>
+			<artifactId>wiremock-spring-boot</artifactId>
+			<version>4.0.7</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
