--- a/Deel 3/legalfly/src/main/resources/application.yml
+++ b/Deel 3/legalfly/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
     mode: HTML
     cache: false
   datasource:
-    url: jdbc:mysql://localhost/legalfly?serverTimezone=UTC
-    username: LegalflyUser
-    password: LegalflyUserpw
+    url: jdbc:mysql://localhost/adt_c_opdracht2_deel2
+    username: legalflyuser_opdracht2
+    password: legalflypassword
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
 
 server:
-  port: 8888
+  port: 9081
