--- a/Deel1/brainstorm2018wa2sb2025seleniumSimple/pom.xml
+++ b/Deel1/brainstorm2018wa2sb2025seleniumSimple/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.openai</groupId>
+			<artifactId>openai-java</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-starter-model-openai</artifactId>
 		</dependency>
